@@ -1,5 +1,6 @@
 [COLOR blue][B]Skin Estuary uMod2Local[/B][/COLOR]
-[COLOR green][B]•3.1.4[/B] Minor Change.[/COLOR]
+[COLOR green][B]•3.1.5[/B] Widget Anime Added.[/COLOR]
+[COLOR yellow][B]•3.1.4[/B] Minor Change.[/COLOR]
 [COLOR yellow][B]•3.1.3[/B] Add MC icon.[/COLOR]
 [COLOR yellow][B]•3.1.2[/B] Minor bug fix.[/COLOR]
 [COLOR yellow][B]•3.1.1[/B] Add more Halloween and Xmas logos.[/COLOR]
